This issue tracker has been migrated to GitHub, and is currently read-only.
For more information, see the GitHub FAQs in the Python's Developer Guide.

classification
Title: Fix col_offset for ast nodes: AsyncFor, AsyncFunctionDef, AsyncWith
Type: Stage: resolved
Components: Library (Lib) Versions: Python 3.7, Python 3.6, Python 3.5
process
Status: closed Resolution: fixed
Dependencies: Superseder:
Assigned To: Nosy List: guoci, miss-islington
Priority: normal Keywords: patch

Created on 2017-10-30 16:14 by guoci, last changed 2022-04-11 14:58 by admin. This issue is now closed.

Pull Requests
URL Status Linked Edit
PR 4175 merged guoci, 2017-10-30 16:33
PR 9188 merged miss-islington, 2018-09-11 21:45
Messages (2)
msg325071 - (view) Author: miss-islington (miss-islington) Date: 2018-09-11 21:45
New changeset 90fc8980bbcc5c7dcced3627fe172b0bfd193a3b by Miss Islington (bot) (guoci) in branch 'master':
closes bpo-31902: Fix the col_offset attribute for ast.Async* nodes to point to the "async" keyword. (GH-4175)
https://github.com/python/cpython/commit/90fc8980bbcc5c7dcced3627fe172b0bfd193a3b
msg325077 - (view) Author: miss-islington (miss-islington) Date: 2018-09-11 22:21
New changeset d8bc7a666b1309aa5669980e35e7429071f3f7d3 by Miss Islington (bot) in branch '3.7':
closes bpo-31902: Fix the col_offset attribute for ast.Async* nodes to point to the "async" keyword. (GH-4175)
https://github.com/python/cpython/commit/d8bc7a666b1309aa5669980e35e7429071f3f7d3
History
Date User Action Args
2022-04-11 14:58:53adminsetgithub: 76083
2018-09-11 22:21:14miss-islingtonsetmessages: + msg325077
2018-09-11 21:45:59miss-islingtonsetpull_requests: + pull_request8626
2018-09-11 21:45:49miss-islingtonsetstatus: open -> closed

nosy: + miss-islington
messages: + msg325071

resolution: fixed
stage: patch review -> resolved
2017-10-30 16:33:50guocisetkeywords: + patch
stage: patch review
pull_requests: + pull_request4143
2017-10-30 16:14:48guocicreate